css/main.css
/* ---- GLOBAL STYLING ---- */

html{
    position: relative;
    background: rgb(68,68,68);
    font-family: 'Source Sans Pro', sans-serif;
    color: rgb(184,184,184);
}

h1,h2,h3,h4,h5{
    font-family: 'Source Sans Pro';
}
h1{
    font-size: 54px;
    font-weight: 200;
    margin: 60px 0px 0px;
}
h2{
    font-size: 23px;
    letter-spacing: 1px;
    font-weight: 300;
    margin: 0px 0px 60px;
    opacity: 0.6;
}
h3 {
    font-weight: 300;
    font-size: 36px;
    margin: 30px 0 -5px;
}
a {
    color: inherit;
}
.secondary p {
    color: rgb(150,150,150);
}
.hidden{
    display: none !important;
}
.invisible{
    opacity: 0 !important;
    -webkit-transition: opacity 150ms linear;
       -moz-transition: opacity 150ms linear;
        -ms-transition: opacity 150ms linear;
            transition: opacity 150ms linear;
}
.centered{
    text-align: center !important;
}
.important{
    color: #43A853 !important;
}
.page{
    overflow: none;
    width: 600px;
    margin: 0px auto;
    
}
.page p{
    text-align: justify;
}
.pagetitle{
    text-align: center;
}
/* ----- Scrollbars ----- */

*::-webkit-scrollbar{
    width:  12px;
    height: 12px;
}
*::-webkit-scrollbar-track{
    background: rgb(40,40,40);
}
*::-webkit-scrollbar-thumb{
    background: rgb(100,100,100);
    min-height: 30px;
    border-radius: 3px;
    border: solid 1px rgb(40,40,40);
    -webkit-transition: all 250ms linear;
}
*::-webkit-scrollbar-thumb:hover{
    background: rgb(120,120,120);
}
#editor-html *::-webkit-scrollbar{
    width:  12px;
    height: 12px;
}
#editor-html *::-webkit-scrollbar-track{
    background: rgb(40,35,35);
    border-radius: 3px;
}
#editor-html *::-webkit-scrollbar-thumb{
    background: rgb(92,87,87);
    min-height: 30px;
    border-radius: 3px;
    border: solid 1px rgb(40,35,35);
    -webkit-transition: all 250ms linear;
}
#editor-html *::-webkit-scrollbar-thumb:hover{
    background: rgb(102,97,97);
}

/* ----- Outside Links ----- */

.links,.footer {
    text-align: center;
    color: rgb(83, 83, 83);
}
.links a {
    display: inline-block;
    width: 24%;
    text-align: center;
    text-decoration: none;
    margin-bottom: 10px;
    -webkit-transition: color 150ms linear;
       -moz-transition: color 150ms linear;
        -ms-transition: color 150ms linear;
            transition: color 150ms linear;
}
.links a:hover {
    color: rgb(120,120,120);
}
.footer {
    margin-top: 60px;
    
}
/* ----- Text Inputs ----- */

.textinput{
    background: rgb(85,85,85);
    border-radius: 3px;
    margin-bottom: 16px;
    border: none;
    padding: 16px;
    font-size: 16px;
    font-family: 'Source Sans Pro';
    box-sizing: border-box;
    color: rgb(180,180,180);
    overflow: hidden;
    text-overflow: ellipsis;
    resize: none;
    -webkit-transition: background 150ms;
       -moz-transition: background 150ms;
        -ms-transition: background 150ms;
            transition: background 150ms;
    
}
.textinput:focus{
    border: none;
    outline: none;
    background: rgb(95,95,95);
    color: rgb(220,220,220);
}
.textinput::-webkit-input-placeholder {   color: rgb(150,150,150);    font-style: italic;  }
         .textinput::-moz-placeholder {   color: rgb(150,150,150);    font-style: italic;  }
          .textinput:-moz-placeholder {   color: rgb(150,150,150);    font-style: italic;  }
           .textinput:-ms-placeholder {   color: rgb(150,150,150);    font-style: italic;  }

.textinput.fixed{
    font-family: 'Inconsolata';
    font-size: 16px;
}
.textinput+.textinput{
    margin-left:14px;
}
.textinput.invalid{
    background: rgb(112, 77, 77);
    color: rgb(255, 150, 150);
}
.textinput.valid{
    background: rgb(85, 119, 90);
    color: rgb(150, 255, 154);
}
.textinput.glueleft{
    margin-left: -5px;
    border-top-left-radius: 0px;
    border-bottom-left-radius: 0px;
    border-left: solid 2px rgba(0, 0, 0, 0.3);
}


/* ----- EDITORS ----- */

#editor-text{
    width: 100%;
    display: block;
}
#editor-html{
    width: 100%;
}
#editor-img{
    position: relative;
    background: rgb(85,85,85);
    border-radius: 3px;
    margin-bottom: 16px;
    border: none;
    font-size: 16px;
    font-family: 'Source Sans Pro';
    box-sizing: border-box;
    color: rgb(180,180,180);
    overflow: hidden;
    text-overflow: ellipsis;
    min-height: 222px;
    resize: none;
    text-align: center;
    cursor: pointer;
    -webkit-transition: background 150ms;
       -moz-transition: background 150ms;
        -ms-transition: background 150ms;
            transition: background 150ms;
    -webkit-user-select: none;
       -moz-user-select: none;
        -ms-user-select: none;
            user-select: none;
}
.dropinvite{
    display: inline-block;
    text-align: center;
    margin-top: 66px; 
}
.dropinvite i{
    font-size: 48px;
}

#img-selector{
    opacity: 0;
    cursor: pointer;
    position: absolute;
    top: 0; right: 0; bottom:0; left: 0;
}
.userimages img{
    max-width: 100%;
    border-radius: 3px;
    display: block;
    margin: 0px auto;
}
#img-error{
    position: absolute;
    bottom: 6px;
    left: 20%;
    padding: 8px;
    right: 20%;
    text-align: center;
}
#password{
    width: 230px;
}
#security{
    position: relative;
    display: inline-block;
    width: 120px;
    -webkit-transition: all 250ms linear;
       -moz-transition: all 250ms linear;
        -ms-transition: all 250ms linear;
            transition: all 250ms linear;
}
#security i{
    display: inline-block;
    width:16px;
    text-align: center;
}
#security .progress{
    display: block;
    position: absolute;
    bottom: 0px;
    width: 37%;
    left: 0px;
    height: 5px;
    background: rgba(255, 255, 255, 0.08);
}
/* ----- BUTTONS ----- */

.button{
    position: relative;
    top: 0px;
    background: rgb(67, 168, 83);
    padding: 16px;
    font-family: 'Source Sans Pro';
    font-size: inherit;
    color: rgb(255, 255, 255);
    font-weight: 600;
    cursor: pointer;
    border-radius: 3px;
    border: none;
    outline: none;
    text-shadow: 0px 1px 1px rgba(8, 65, 5, 0.53);
    user-select: none;
    -webkit-transition: all 150ms linear;
       -moz-transition: all 150ms linear;
        -ms-transition: all 150ms linear;
            transition: all 150ms linear;
}
.button:focus, .button:hover{
    top: -2px;
    box-shadow: 0px 2px rgb(51, 126, 63), 0px 2px 3px rgba(0, 0, 0, 0.22);
}
.button:active{
    background: rgb(47, 148, 63);
}
.button.disabled{
    top: 0px;
    box-shadow: none;
    cursor: default;
    color: rgb(209, 209, 209);
    background: rgb(85, 119, 90);
}

.textinput+.button{
    margin-left: 14px;
}

.btn{
    background: rgb(184,184,184);
    border-radius: 3px;
    cursor: pointer;
    color: rgb(68,68,68);
    padding: 2px 4px;
}

/* ----- URL BOX ----- */

#display{
    margin-top: 32px;
}
.cryptostuff{
    margin-bottom: 60px;
}
.urlbox{
    padding: 16px;
    background: rgb(58, 58, 58);
    text-overflow: ellipsis;
    overflow: hidden;
    border-radius: 3px;
    color: rgb(219, 219, 219);
}
.urlbox .url{
    white-space: nowrap;
}
.urlbox em{
    font-weight: 900;
    font-style: normal;
    margin-right: 1em;
}
.urlbox a{
    color: white;
    text-decoration: none;
}
.urlbox a:hover{
    text-decoration: underline;
}
.status{
    text-align: center;
    margin-top: 8px;
    opacity: 0.5;
}

/* ------ QR CODE ------ */

#display-qrcode{
    text-align: center;
}
#qrcode{
    display: inline-block;
    background: white;
    padding: 16px;
    border-radius: 3px;
    color: black;
    text-align: center;
}

/* ------ LOADING SCREEN ------ */

.loading{
    position: absolute;
    z-index: 1000;
    top:0; left: 0; right: 0; bottom: 0;
    user-select: none;
    pointer-events: none;
    background: rgba(0,0,0,0.75);
    color: white;
    text-shadow: 0px 1px 3px rgba(0,0,0,0.5);
    -webkit-animation: all linear 500ms;
       -moz-animation: all linear 500ms;
        -ms-animation: all linear 500ms;
            animation: all linear 500ms;
}
.loading .throbber{
    position: fixed;
    width: 200px;
    height: 100px;
    left: 50%;
    top: 50%;
    margin-left: -100px;
    margin-top: -50px;
    text-align: center;
}
.loading .throbber .icon{
    font-size: 48px;
    margin-bottom: 16px;
}
.secondary{
    background: rgb(54,54,54);
    padding: 60px 0px;
}
/* ----- RADIO BUTTONS ----- */

.radiobutton{
    display: inline-block;
    user-select: none;
    margin-bottom: 16px;
}
.radiobutton > .option{
    position: relative;
    display: inline-block;
    padding: 4px 6px;
    background: rgb(85,85,85);
    margin-right: -1px;
    cursor: pointer;
    user-select: none;
}
.radiobutton > .option.active{
    background: rgb(45,45,45);
}
.radiobutton > .option.first{
    border-top-left-radius: 3px;
    border-bottom-left-radius: 3px;
}
.radiobutton > .option.last{
    border-top-right-radius: 3px;
    border-bottom-right-radius: 3px;
}

/* ----- LABELS ----- */
.label {
    margin-left: 10px;
    opacity: 0.5;
}

